2023-06-25  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_optim_octavesq: Catch sqp error (closes tickets #38 and #39)

	* misc/optim/@stk_optim_octavesqp/stk_minimize_boxconstrained.m:
	Catch sqp errors and return the best point found so far.

2023-06-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Provide utility to run the test suite on all available Matlabs

	* admin/stk_runtests_allmatlabs.m: Run the test suite on all
	available Matlabs.
	* admin/stk_runtests_allmatlabs_summary.m: Summarize the results.
	This function is called by the main one, but can also be used
	on its own if the tests have been run previously.
	* .gitignore: Ignore output dir.

2023-02-25  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_runtests.m: Optionnally, save the result to a mat-file

	* misc/test/stk_runtests.m: Optionnally, save the result to a
	mat-file and log the ouput to a diary.

2023-01-14  Julien Bect  <julien.bect@centralesupelec.fr>

	htmldoc: Increase font size to 16px

	* admin/htmldoc/stk.css: Increase font size to 16px.

2023-01-09  Julien Bect  <julien.bect@centralesupelec.fr>

	Simplify HTML doc build

	* admin/build_tools/generate_htmldoc.m: Remove `flavour` option.
	* build.m: Propagate.
	* admin/build_tools/build_allpurpose_htmldoc.m: Propagate.

2023-01-06  Julien Bect  <julien.bect@centralesupelec.fr>

	Simplify build process

	* Makefile: Remove the distinction between the github release and
	the Octave Forge release.  There is only one release now, the
	github one (still with two tarballs).
	* admin/build_tools/build_allpurpose.m: Update paths.
	* admin/build_tools/build_octpkg.m: Idem.
	* .github/workflows/run-tests.yml: Idem.

	Raise minimal (tested) Matlab version number to R2014a

	* README.md: Raise minimal (tested) Matlab version number to R2014a.
	* NEWS.md: Advertise the change.

2023-01-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Raise required Octave version number to 4.0.1
