@@ -1,3 +1,14 @@
+2023-09-11  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	stk_covmat_noise.m: Remove unused outputs P1, P2
+
+	* model/@stk_model_/stk_covmat_noise.m: Remove unused outputs P1, P2.
+	* model/@stk_model_gpposterior/stk_covmat_noise.m: Idem.
+	* model/noise/@stk_gaussiannoise_/stk_covmat_noise.m: Idem.
+	* model/prior_struct/stk_covmat_noise.m: Idem.
+
+	[Changes imported manually from branch `lm-param`, written in 2021.]
+
 2023-06-25  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	@stk_optim_octavesq: Catch sqp error (closes tickets #38 and #39)
